<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="23dp"
    android:paddingTop="48dp">


  <ImageButton
      android:id="@+id/ibBack"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:background="@drawable/back_shape"
      android:contentDescription="@string/todo"
      android:src="@drawable/ic_back"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/tvAbone"
      android:layout_width="0dp"
      android:layout_height="32dp"
      android:layout_marginStart="87dp"
      android:layout_marginEnd="142dp"
      android:text="@string/abone_olun"
      android:textColor="@color/orange"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="@id/ibBack"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/ibBack"
      app:layout_constraintTop_toTopOf="@id/ibBack"
      />

  <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:tabTextColor="@color/orange"
      app:layout_constraintEnd_toEndOf="parent"
      android:background="@drawable/sahpe_tablayout"
      app:tabSelectedTextColor="@color/black"
      android:backgroundTintMode="src_atop"
      app:tabIndicatorColor="@color/orange"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvAbone"
      app:layout_constraintBottom_toTopOf="@id/viewPager2"
      app:tabSelectedTextAppearance="@drawable/shape_tablayout"
      app:tabMode="fixed"
      android:layout_marginTop="40dp"
      app:tabIndicator="@drawable/shape_tablayout"/>

  <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/viewPager2"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tabLayout"
      android:layout_marginTop="40dp"/>

  <Button
      android:id="@+id/mbPayment"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/shape_button"
      android:text="@string/d_v_abun_ol_60_azn"
      android:textSize="16sp"
      android:textAllCaps="false"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="60dp"
      />

</androidx.constraintlayout.widget.ConstraintLayout>